# jobsearch

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  main.py  political-nonprofit-job-boards.csv  pyproject.toml  review.py  run_pipeline.sh  web.py
agents/: scorer.py  scraper.py  tailor.py
graph/: pipeline.py
graph/nodes/: scrape.py  supervisor.py
plans/: email-unknown-domain-parser.md
resume/: resume.md
scrapers/: email_scraper.py  fastforward_scraper.py  jobspy_scraper.py  journalismjobs_scraper.py  levelsfyi_scraper.py  techjobsforgood_scraper.py  usajobs_scraper.py
templates/: cold_outreach.md  cover_letter.md
utils/: claude_client.py  db.py  export.py
web_templates/: base.html  index.html  job_detail.html  jobs.html
